2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added PFI decoding.

2015-11-30  Natalia Portillo  <claunia@claunia.com>

	* Commands/Benchmark.cs:
	  Corrected style.

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	  Disabled Fletcher as it is abnormally slow.

2015-11-30  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Options.cs:
	* DiscImageChef.csproj:
	* Commands/Benchmark.cs:
	  Added 'benchmark' command to benchmark checksum and hashing
	  algorithms.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added a workaround for Nintendo GameCube and Wii discs.
	Added SCSI READ MEDIA SERIAL NUMBER support.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Reorganized media-info command so only applicable
	  information is requested based on what we are being informed
	  about media type.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added decoding and prettifying READ DISC INFORMATION.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Check current profile and prettify TOC, PMA, ATIP, Session
	  and CD-TEXT.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Options.cs:
	* DiscImageChef.csproj:
	* Commands/MediaInfo.cs:
	  Added media-info command

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Decode SCSI sense.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Moved ATA register definition to a more common place.

2015-11-10  Natalia Portillo  <claunia@claunia.com>

	* Commands/Checksum.cs:
	  Modified checksums command to use multiple-sector reading
	  and be heavily multithreaded.

	* DiscImageChef.csproj:
	  Enable optimizations on Release.

2015-11-09  Natalia Portillo  <claunia@claunia.com>

	* Commands/Checksum.cs:
	  Corrected checksum calculation for multiple tracks
